--- a/index.html
+++ b/index.html
@@ -132,84 +132,87 @@
             </div>
           </div>
         </div>
-
-        <div style="padding-left: 20%">
-          <div style="position: relative">
-            <p
-              style="
-                position: absolute;
-                top: 0px;
-                left: 10px;
-                background-color: #004f44;
-                padding: 7px 15px;
-                font-size: 12px;
-                color: rgb(255, 255, 255);
-              "
-            >
-              New
-            </p>
-            <img style="width: 222px" src="plant.jpg" alt="Plant" />
-          </div>
-
-          <div style="position: relative">
-            <p
-              style="
-                position: absolute;
-                top: 0px;
-                left: 10px;
-                background-color: #004f44;
-                padding: 7px 15px;
-                font-size: 12px;
-                color: rgb(255, 255, 255);
-              "
-            >
-              Popular
-            </p>
-            <img style="width: 222px" src="cactus.jpg" alt="Cactus" />
-          </div>
-        </div>
-
-        <div>
-          <div style="position: relative">
-            <p
-              style="
-                position: absolute;
-                top: 0px;
-                left: 10px;
-                background-color: #004f44;
-                padding: 7px 15px;
-                font-size: 12px;
-                color: #ffffff;
-              "
-            >
-              Featured
-            </p>
-            <img
-              style="width: 380px; height: 648px"
-              src="flower.jpg"
-              alt="Anthurium Flower"
-            />
-            <div style="position: absolute; left: 10px; bottom: 25px">
-              <h3 style="font-size: 28px; color: #000000">Anthurium Flower</h3>
-              <p style="font-size: 14px; color: #000000">
-                The flower of human being. It has meaningful fact that the plant
-                always grow whatever season and weather...
-              </p>
+        <div style="display: flex; gap: 5px">
+          <div>
+            <div style="position: relative">
               <p
                 style="
-                  width: 327px;
-                  height: 48px;
-                  color: #ffffff;
+                  position: absolute;
+                  top: 0px;
+                  left: 10px;
                   background-color: #004f44;
-                  align-items: center;
+                  padding: 7px 15px;
                   font-size: 12px;
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
+                  color: rgb(255, 255, 255);
                 "
               >
-                READ MORE
+                New
               </p>
+              <img style="width: 222px" src="plant.jpg" alt="Plant" />
+            </div>
+
+            <div style="position: relative">
+              <p
+                style="
+                  position: absolute;
+                  top: 0px;
+                  left: 10px;
+                  background-color: #004f44;
+                  padding: 7px 15px;
+                  font-size: 12px;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Popular
+              </p>
+              <img style="width: 222px" src="cactus.jpg" alt="Cactus" />
+            </div>
+          </div>
+
+          <div>
+            <div style="position: relative">
+              <p
+                style="
+                  position: absolute;
+                  top: 0px;
+                  left: 10px;
+                  background-color: #004f44;
+                  padding: 7px 15px;
+                  font-size: 12px;
+                  color: #ffffff;
+                "
+              >
+                Featured
+              </p>
+              <img
+                style="width: 380px; height: 648px"
+                src="flower.jpg"
+                alt="Anthurium Flower"
+              />
+              <div style="position: absolute; left: 10px; bottom: 25px">
+                <h3 style="font-size: 28px; color: #000000">
+                  Anthurium Flower
+                </h3>
+                <p style="font-size: 14px; color: #000000">
+                  The flower of human being. It has meaningful fact that the
+                  plant always grow whatever season and weather...
+                </p>
+                <p
+                  style="
+                    width: 327px;
+                    height: 48px;
+                    color: #ffffff;
+                    background-color: #004f44;
+                    align-items: center;
+                    font-size: 12px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                  "
+                >
+                  READ MORE
+                </p>
+              </div>
             </div>
           </div>
         </div>
