--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         height: 100px;
       "
     >
-      <div style="display: flex; gap: 20px">
+      <div style="display: flex; gap: 20px" id="menu-list">
         <a
           style="text-decoration: none; color: #ffffff; font-size: 16px"
           href="#"
@@ -39,6 +39,34 @@
           href="#"
           >Guide</a
         >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32px"
+          height="32px"
+          viewBox="0 0 24 24"
+          fill="none"
+          style="display: none"
+          id="burger"
+        >
+          <path
+            d="M4 18L20 18"
+            stroke="#fff"
+            stroke-width="2"
+            stroke-linecap="round"
+          />
+          <path
+            d="M4 12L20 12"
+            stroke="#fff"
+            stroke-width="2"
+            stroke-linecap="round"
+          />
+          <path
+            d="M4 6L20 6"
+            stroke="#fff"
+            stroke-width="2"
+            stroke-linecap="round"
+          />
+        </svg>
       </div>
 
       <div
@@ -99,11 +127,18 @@
     <main>
       <section class="hero">
         <div>
-          <div style="width: 420px">
+          <div style="width: 420px" class="hero-grandchild">
             <h1 style="font-size: 64px; color: #ffffff">
               Happiness blooms from within
             </h1>
-            <p style="font-size: 16px; color: #ffffff; max-width: 390px">
+            <p
+              style="
+                font-size: 16px;
+                color: #ffffff;
+                max-width: 390px;
+                padding-bottom: 20px;
+              "
+            >
               Our environment, the world in which we live and work, is a mirror
               of our attitudes and expectations.
             </p>
@@ -132,7 +167,7 @@
             </div>
           </div>
         </div>
-        <div style="display: flex; gap: 5px">
+        <div style="display: flex; gap: 5px" class="hero-child">
           <div>
             <div style="position: relative">
               <p
@@ -812,15 +847,12 @@
           style="
             display: flex;
             justify-content: space-between;
-            padding-left: 5vw;
-            padding-right: 5vw;
             overflow-x: scroll;
             max-width: 100vw;
             width: max-content;
-            gap: 10px;
           "
         >
-          <div style="position: relative">
+          <div style="position: relative; margin-left: 10px">
             <img style="width: 270px; height: 440px" src="alish1.png" />
             <div
               style="
@@ -851,13 +883,22 @@
             </div>
           </div>
           <div>
-            <img style="width: 270px; height: 440px" src="alish2.png" />
+            <img
+              style="width: 270px; height: 440px; margin-left: 10px"
+              src="alish2.png"
+            />
           </div>
           <div>
-            <img style="width: 270px; height: 440px" src="alish3.png" />
+            <img
+              style="width: 270px; height: 440px; margin-left: 10px"
+              src="alish3.png"
+            />
           </div>
           <div>
-            <img style="width: 270px; height: 440px" src="alish4.png" />
+            <img
+              style="width: 270px; height: 440px; margin-left: 10px"
+              src="alish4.png"
+            />
           </div>
         </div>
       </section>
